2014-11-28 <TJW>
   Minor change to default parameters in axes definition
2014-10-08 <TJW>
   Updated example file with new e+e- measure definitions
   Added measure type to measure definition descriptions
   Changed order of parameters in new axes definitions
   Added standard C++ epsilon definition to GeneralERecombiner
2014-10-07 <TJW>
   Updated example_advanced_usage with new axes choices
   Reversed inheritance of NormalizedMeasure and NormalizedCutoffMeasure (and Geometric) back to original
   Storing _RcutoffSq as separate variable, and recalculating it in NormalizedMeasure 
   Cleaning up ExclusiveCombinatorialJetAxes and added comments to explain the process
   Fixed memory leaks using delete_recombiner_when_unused()
   Fixed manual axes bug in Njettiness
   Cleaned up enum definitions
2014-10-01 <TJW>
   Added new parameterized recombination scheme to Winner-Take-All recombiner
   Created Winner-Take-All GenKT and general Recomb GenKT axes finders and onepass versions
   Created new N choose M minimization axis finder, created N choose M WTA GenKT axis finder as example
   Removed NPass as constructor argument in AxesDefinition, made it set through protected method
   Removed TauMode as constructor argument in MeasureDefinition, made it set through protected method
   Flipped inheritance of NormalizedMeasure and NormalizedCutoffMeasure (same for Geometric) to remove error of squaring the integer maximum
   Created new MeasureType enum to allow user to choose between pp and ee variables (ee variables need testing)
   Updated MeasureDefinition constructors to take in extra MeasureType parameter (but defaulted to pp variables)
   Added new Default TauMode argument 
   Fixed unsigned integers in various places
   Added setAxes method to NjettinessPlugin
2014-08-26 <JDT>
   Enhanced TauComponents to include more infomation
   NjettinessExtras now inherits from TauComponents
   Removed getPartition from Njettiness, to avoid code duplication