@@ -294,6 +294,72 @@ std::vector<fastjet::PseudoJet> GeometricAxesRefiner::get_one_pass_axes(int n_je
    return seedAxes;
 }
 
+// Added by TJW for GeneralAxesRefiner
+
+// uses minimization of N-jettiness to continually update axes until convergence.
+// The function returns the axes found at the (local) minimum
+std::vector<fastjet::PseudoJet> GeneralAxesRefiner::get_one_pass_axes(int n_jets, const std::vector <fastjet::PseudoJet> & particles, const std::vector<fastjet::PseudoJet>& seedAxes) const {
+
+   assert(n_jets == (int)seedAxes.size());
+   
+   std::vector<fastjet::PseudoJet> onepassAxes = seedAxes;
+   double originalTau = _associatedMeasure->result(particles, seedAxes);
+   double seedTau = _associatedMeasure->result(particles, seedAxes);
+   
+   for (int i_att = 0; i_att < _nAttempts; i_att++) {
+      
+      std::vector<fastjet::PseudoJet> newAxes(seedAxes.size(),fastjet::PseudoJet(0,0,0,0));
+      // find closest axis and assign to that
+      for (unsigned int i = 0; i < particles.size(); i++) {
+         
+         // start from unclustered beam measure
+         int minJ = -1;
+         double minDist = _associatedMeasure->beam_distance_squared(particles[i]);
+         
+         // which axis am I closest to?
+         for (unsigned int j = 0; j < seedAxes.size(); j++) {
+            double tempDist = _associatedMeasure->jet_distance_squared(particles[i],onepassAxes[j]);
+            if (tempDist < minDist) {
+               minDist = tempDist;
+               minJ = j;
+            }
+         }
+         
+         // if not unclustered, then cluster
+         if (minJ != -1) {
+            double axes_function = _associatedMeasure->axes_numerator(particles[i], onepassAxes[minJ]);
+            PseudoJet scaled_perp;
+            // check to see if the scaling is finite, otherwise don't do any scaling
+            if (std::isfinite(axes_function)) scaled_perp = particles[i]*axes_function;
+            else scaled_perp = particles[i];
+
+            newAxes[minJ] += scaled_perp;
+         }
+      }
+
+      //convert the axes to LightLike and then back to PseudoJet (not sure if this is necessary or not) -- TJW
+      std::vector< LightLikeAxis > newAxes_light(n_jets, LightLikeAxis(0,0,0,0));
+      for (unsigned int k = 0; k < n_jets; k++) {
+         newAxes_light[k].set_rap(newAxes[k].rap());
+         newAxes_light[k].set_phi(newAxes[k].phi());
+         newAxes[k] = newAxes_light[k].ConvertToPseudoJet();
+      }
+      
+      // calculate tau on new axes
+      onepassAxes = newAxes;
+      double tempTau = _associatedMeasure->result(particles, newAxes);
+      
+      // close enough to stop?
+      if (fabs(tempTau - seedTau) < _accuracy) break;
+      seedTau = tempTau;
+   }
+
+   double finalTau = _associatedMeasure->result(particles, onepassAxes);
+   if ((finalTau - originalTau) > 0) onepassAxes = seedAxes;
+
+   return onepassAxes;
+}
+
 // Go from internal LightLikeAxis to PseudoJet
 fastjet::PseudoJet LightLikeAxis::ConvertToPseudoJet() {
     double px, py, pz, E;
